<resources>
    <string name="app_name">Spotify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_library">Library</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Search</string>
    <string name="menu_slideshow">Library</string>
    <string name="trending1">Rising tracks we think you will like</string>
    <string name="trending2">Trending songs for you</string>
    <string name="songName">Song Name</string>
    <string name="suggested">Suggested artists</string>
    <string name="artistName">Artist Name</string>
    <string name="viewProfile">View Profile</string>
    <string name="following">Following</string>
    <string name="whatsNew">Whats new</string>
    <string name="addAccount">Add account</string>
    <string name="recents">Recents</string>
    <string name="yourUpdates">Your Updates</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>