<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_songFragment"
            app:destination="@id/nav_song" />
        <action
            android:id="@+id/action_HomeFragment_to_searchFragment"
            app:destination="@id/nav_search" />
    </fragment>

    <fragment
        android:id="@+id/nav_player"
        android:name="com.example.navdrawer.ui.player.playerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_player">
        <action
            android:id="@+id/action_playerFragment_to_LibraryFragment"
            app:destination="@id/nav_library" />

    </fragment>

    <fragment
        android:id="@+id/nav_song"
        android:name="com.example.navdrawer.ui.song.songFragment"
        android:label="Song"
        tools:layout="@layout/fragment_song">
        <action
            android:id="@+id/action_SongFragment_to_playerFragment"
            app:destination="@id/nav_player" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.navdrawer.ui.search.SearchFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_SearchFragment_to_HomeFragment"
            app:destination="@id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.navdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.example.app.fragment_slideshow">

        <action
            android:id="@+id/action_libraryFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.app.favorites_fragment" />

</navigation>